# pjecz-prometeo

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: gcloud-app-deploy.yaml
config/: settings.py
lib/: authentications.py  database.py  exceptions.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  google_cloud_storage.py  recaptcha_enterprise.py  safe_string.py  schemas_base.py
prometeo/: app.py
prometeo/core/autoridades/: models.py
prometeo/core/distritos/: models.py
prometeo/core/edictos/: models.py
prometeo/core/glosas/: models.py
prometeo/core/listas_de_acuerdos/: models.py
prometeo/core/materias/: models.py
prometeo/core/sentencias/: models.py
prometeo/v3/autoridades/: crud.py  paths.py  schemas.py
prometeo/v3/distritos/: crud.py  paths.py  schemas.py
prometeo/v3/edictos/: crud.py  paths.py  schemas.py
prometeo/v3/glosas/: crud.py  paths.py  schemas.py
prometeo/v3/listas_de_acuerdos/: crud.py  paths.py  schemas.py
prometeo/v3/materias/: crud.py  paths.py  schemas.py
prometeo/v3/materias_tipos_juicios/: crud.py  paths.py  schemas.py
prometeo/v3/sentencias/: crud.py  paths.py  schemas.py
prometeo/v4/autoridades/: crud.py  paths.py  schemas.py
prometeo/v4/distritos/: crud.py  paths.py  schemas.py
prometeo/v4/edictos/: crud.py  paths.py  schemas.py
prometeo/v4/glosas/: crud.py  paths.py  schemas.py
prometeo/v4/listas_de_acuerdos/: crud.py  paths.py  schemas.py
prometeo/v4/materias/: crud.py  paths.py  schemas.py
prometeo/v4/materias_tipos_juicios/: crud.py  paths.py  (+1 more)
rest-client/: README.md  autoridades.rest  distritos.rest  edictos.rest  glosas.rest  listas_de_acuerdos.rest  materias.rest  sentencias.rest
tests/: README.md  load_env.py  test_autoridades.py  test_distritos.py  test_edictos.py  test_glosas.py  test_listas_de_acuerdos.py  test_materias.py  test_materias_tipos_juicios.py  test_sentencias.py
(+3 files in other folders)
