[tool.poetry]
name = "pjecz-prometeo"
version = "0.1.0"
description = "Entregar archivos almacenados en depósitos que no son públicos. Hecho con FastAPI."
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "pjecz_prometeo"}]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.1"
fastapi = "^0.100.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.5"}
google-auth = "^2.21.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.16.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
pydantic = "^2.0.2"
pydantic-settings = "^2.0.1"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
sqlalchemy = "^2.0.18"
sqlalchemy-utils = "^0.41.1"
unidecode = "^1.3.6"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
bump-pydantic = "^0.3.0"
pylint = "^2.17.4"
pylint-sqlalchemy = "^0.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256
